--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -3,7 +3,7 @@
         <div class="col-8 offset-3 mt-3">
             <h3><%= listing.title%></h3>
         </div>
-        <div class="card col-6 offset-3 show-card">
+        <div class="card col-6 offset-3 show-card listing-card">
                 <img src="<%= listing.image.url%>" class="card-img-top show-img" alt="listing_image">
                 <div class="card-body">
                     <p class="card-text">
@@ -39,7 +39,22 @@
             </form>
 
             <hr>
-            <h4>Reviews</h4>
-            <p><%=listing.reviews%></p>
+            <p><b>Reviews</b></p>
+            <div class="row">
+
+                <%for(review of listing.reviews){%>
+                    <div class="card col-5 ms-3 mb-3">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text"><%=review.comment%></p>
+                            <p class="card-text"><%=review.rating%></p>
+                        </div>
+                        <form action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=delete" class="mb-3" method="post">
+                            <button class="btn btn-sm btn-dark">Delete</button>
+                        </form>
+                    </div>
+
+                    <%}%>    
+            </div>
         </div>
     </div>
