--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -49,7 +49,7 @@
                             <p class="card-text"><%=review.comment%></p>
                             <p class="card-text"><%=review.rating%></p>
                         </div>
-                        <form action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=delete" class="mb-3" method="post">
+                        <form method="post" action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE" class="mb-3" >
                             <button class="btn btn-sm btn-dark">Delete</button>
                         </form>
                     </div>
